apps/workbench/app/globals.css
@import "@repo/ui/index.css";

@source "./**/*.{ts,tsx}" "../../packages/ui/src/**/*.{ts,tsx}";

:root {
  --header-gradient: linear-gradient(
    to bottom,
    var(--color-surface-secondary) 0%,
    transparent 100%
  );
}

body {
  background-color: var(--color-surface-secondary);
}
.react-flow__node {
  overflow: visible;
}

.react-flow.react-flow,
.react-flow.react-flow.dark {
  --xy-edge-stroke: var(--stroke-accent);
  --xy-edge-stroke-selected: var(--stroke-accent);
  --xy-edge-stroke-width: 1;
}

.react-flow.react-flow .react-flow__edge-path {
  stroke-dasharray: 2 2;
}

.bg-dot-pattern {
  background-image: radial-gradient(
    circle,
    var(--color-surface-quaternary) 1px,
    transparent 1px
  );
  background-size: 4px 4px;
}

